10_DevOps/__Ref__/Docker-K8s/K8s/60-networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: myapp-dev
spec:
  podSelector: {}      # tất cả pod
  policyTypes:
    - Ingress
